--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "npm": "1.3"
   },
   "dependencies": {
-    "docpad": "~6.65.0",
+    "docpad": "~6.66.0",
     "docpad-plugin-eco": "~2.0.3",
+    "docpad-plugin-highlightjs": "~2.2.1",
     "docpad-plugin-marked": "~2.2.1"
   },
   "main": "node_modules/docpad/bin/docpad-server",
