--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "docpad": "~6.66.0",
     "docpad-plugin-eco": "~2.0.3",
     "docpad-plugin-highlightjs": "~2.2.1",
-    "docpad-plugin-marked": "~2.2.1"
+    "docpad-plugin-marked": "~2.2.1",
+    "docpad-plugin-partials": "~2.9.1"
   },
   "main": "node_modules/docpad/bin/docpad-server",
   "scripts": {
