--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "dependencies": {
     "docpad": "~6.66.0",
-    "docpad-plugin-eco": "~2.0.3",
     "docpad-plugin-highlightjs": "~2.2.1",
-    "docpad-plugin-marked": "~2.2.1"
+    "docpad-plugin-marked": "~2.2.1",
+    "docpad-plugin-handlebars": "~2.3.0"
   },
   "main": "node_modules/docpad/bin/docpad-server",
   "scripts": {
