--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "no-skeleton.docpad",
+  "name": "infusion-docs-docpad",
   "version": "0.1.0",
   "description": "New DocPad project without using a skeleton",
   "engines": {
@@ -11,6 +11,11 @@
     "docpad-plugin-highlightjs": "~2.2.1",
     "docpad-plugin-marked": "~2.2.1",
     "docpad-plugin-handlebars": "~2.3.0"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.2",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-copy": "^0.5.0"
   },
   "main": "node_modules/docpad/bin/docpad-server",
   "scripts": {
